refactor(test): remove unused imports and cleanup method